--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,8 @@
         <file>ui/BottomBar/BottomBar.qml</file>
         <file>ui/RightScreen/RightScreen.qml</file>
         <file>ui/LeftScreen/LeftScreen.qml</file>
+        <file>ui/assests/car.jpeg</file>
+        <file>ui/assests/car2.jpeg</file>
+        <file>ui/assests/car3.jpeg</file>
     </qresource>
 </RCC>
